models and edit
I modified the codes and tried several different models. I'm saving some results

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 Simulators/ks-simulator/position.dat
 Simulators/ks-simulator/state_history.dat
 Simulators/ks-simulator/time_counter.dat
+Simulators/ks-simulator/state_history_u2.dat
+*.dat
