seeing data and ignoring model 2 of conv3 (too big)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Simulators/ks-simulator/state_history.dat
 Simulators/ks-simulator/time_counter.dat
 Simulators/ks-simulator/state_history_u2.dat
 *.dat
+Simulators/ks-simulator/modelcv3_model2_u3
