--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,49 @@ Simulators/ks-simulator/time_counter.dat
 Simulators/ks-simulator/state_history_u2.dat
 *.dat
 Simulators/ks-simulator/modelcv3_model2_u3
+Simulators/ks-simulator/different_steps_to_predict/2
+Simulators/ks-simulator/different_steps_to_predict/0
+Simulators/ks-simulator/different_steps_to_predict/3
+Simulators/ks-simulator/different_steps_to_predict/4
+Simulators/ks-simulator/different_steps_to_predict/5
+Simulators/ks-simulator/different_steps_to_predict/6
+Simulators/ks-simulator/different_steps_to_predict/7
+Simulators/ks-simulator/different_steps_to_predict/8
+Simulators/ks-simulator/different_steps_to_predict/9
+Simulators/ks-simulator/differents_epochs/0
+Simulators/ks-simulator/differents_epochs/1
+Simulators/ks-simulator/differents_epochs/10
+Simulators/ks-simulator/differents_epochs/11
+Simulators/ks-simulator/differents_epochs/12
+Simulators/ks-simulator/differents_epochs/13
+Simulators/ks-simulator/differents_epochs/14
+Simulators/ks-simulator/differents_epochs/15
+Simulators/ks-simulator/differents_epochs/16
+Simulators/ks-simulator/differents_epochs/17
+Simulators/ks-simulator/differents_epochs/18
+Simulators/ks-simulator/differents_epochs/19
+Simulators/ks-simulator/differents_epochs/2
+Simulators/ks-simulator/differents_epochs/20
+Simulators/ks-simulator/differents_epochs/21
+Simulators/ks-simulator/differents_epochs/22
+Simulators/ks-simulator/differents_epochs/23
+Simulators/ks-simulator/differents_epochs/24
+Simulators/ks-simulator/differents_epochs/25
+Simulators/ks-simulator/differents_epochs/26
+Simulators/ks-simulator/differents_epochs/27
+Simulators/ks-simulator/differents_epochs/28
+Simulators/ks-simulator/differents_epochs/29
+Simulators/ks-simulator/differents_epochs/3
+Simulators/ks-simulator/differents_epochs/30
+Simulators/ks-simulator/differents_epochs/31
+Simulators/ks-simulator/differents_epochs/32
+Simulators/ks-simulator/differents_epochs/33
+Simulators/ks-simulator/differents_epochs/34
+Simulators/ks-simulator/differents_epochs/35
+Simulators/ks-simulator/differents_epochs/4
+Simulators/ks-simulator/differents_epochs/5
+Simulators/ks-simulator/differents_epochs/6
+Simulators/ks-simulator/differents_epochs/7
+Simulators/ks-simulator/differents_epochs/8
+Simulators/ks-simulator/differents_epochs/9
+Simulators/ks-simulator/Models/modelcv3_model2_u3
