--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ Simulators/ks-simulator/differents_epochs/7
 Simulators/ks-simulator/differents_epochs/8
 Simulators/ks-simulator/differents_epochs/9
 Simulators/ks-simulator/Models/modelcv3_model2_u3
+Simulators/ks-simulator/different_steps_to_predict/1
