--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,33 @@ Simulators/ks-simulator/differents_epochs/8
 Simulators/ks-simulator/differents_epochs/9
 Simulators/ks-simulator/Models/modelcv3_model2_u3
 Simulators/ks-simulator/different_steps_to_predict/1
+Simulators/ks-simulator/different_history_size/0
+Simulators/ks-simulator/dataset1/0
+Simulators/ks-simulator/different_history_size/00
+Simulators/ks-simulator/different_history_size/000
+Simulators/ks-simulator/different_history_size/1
+Simulators/ks-simulator/different_history_size/11
+Simulators/ks-simulator/different_history_size/111
+Simulators/ks-simulator/different_history_size/22
+Simulators/ks-simulator/different_history_size/222
+Simulators/ks-simulator/different_history_size/3
+Simulators/ks-simulator/different_history_size/33
+Simulators/ks-simulator/different_history_size/333
+Simulators/ks-simulator/different_history_size/4
+Simulators/ks-simulator/different_history_size/44
+Simulators/ks-simulator/different_history_size/444
+Simulators/ks-simulator/different_history_size/5
+Simulators/ks-simulator/different_history_size/55
+Simulators/ks-simulator/different_history_size/555
+Simulators/ks-simulator/different_history_size/6
+Simulators/ks-simulator/different_history_size/66
+Simulators/ks-simulator/different_history_size/666
+Simulators/ks-simulator/different_history_size/7
+Simulators/ks-simulator/different_history_size/77
+Simulators/ks-simulator/different_history_size/777
+Simulators/ks-simulator/different_history_size/8
+Simulators/ks-simulator/different_history_size/88
+Simulators/ks-simulator/different_history_size/888
+Simulators/ks-simulator/different_history_size/9
+Simulators/ks-simulator/different_history_size/99
+Simulators/ks-simulator/different_history_size/999
