--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,10 @@ Simulators/ks-simulator/different_history_size/888
 Simulators/ks-simulator/different_history_size/9
 Simulators/ks-simulator/different_history_size/99
 Simulators/ks-simulator/different_history_size/999
+Simulators/ks-simulator/different_datasets/modelcv3_model2_u1
+Simulators/ks-simulator/different_datasets/modelcv3_model2_u1u2u3
+Simulators/ks-simulator/different_datasets/modelcv3_model2_u1u2u3u4
+Simulators/ks-simulator/different_datasets/modelcv3_model2_u1u2u3u4_2
+Simulators/ks-simulator/different_datasets/modelcv3_model2_u2
+Simulators/ks-simulator/different_datasets/modelcv3_model2_u3
+Simulators/ks-simulator/different_datasets/modelcv3_model2_u4
